--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,9 @@ Thumbs.db
 vite.config.*.timestamp*
 vitest.config.*.timestamp*
 test-output
+
+# Rust
+packages/parser/target/
+
+# WASM build output
+apps/web/public/pkg/
