--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
-  "name": "@block-parser-wasm/source",
+  "name": "web",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "nx run-many --target=build --projects block-parser-wasm,@block-parser-wasm/web --output-style=static",
+    "format": "biome format . --write",
+    "lint": "biome lint .",
+    "dev": "concurrently -k --prefix none -n WEB,WASM,RUST -c blue,gray,gray \"npm run dev:web\" \"npm run dev:wasm\" \"npm run dev:test:rust\"",
+    "dev:web": "nx serve @block-parser-wasm/web --output-style=static && echo '\n🚀 http://localhost:4200/'",
+    "dev:wasm": "cd packages/parser && cargo watch -q -w src -s \"nx build block-parser-wasm --output-style=static\"",
+    "dev:test:rust": "cd packages/parser && cargo watch -w src -w tests -s 'cargo test --color=always'"
+  },
   "private": true,
   "dependencies": {
     "react": "19.0.0",
@@ -10,6 +18,7 @@
     "react-router-dom": "6.29.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@nx/devkit": "21.1.2",
     "@nx/js": "21.1.2",
     "@nx/playwright": "21.1.2",
@@ -27,9 +36,8 @@
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "@vitest/coverage-v8": "^3.0.5",
-    "@vitest/ui": "^3.0.0",
     "autoprefixer": "10.4.13",
+    "concurrently": "^9.1.2",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "21.1.2",
@@ -37,10 +45,10 @@
     "tailwindcss": "3.4.3",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
-    "vite": "^6.0.0",
-    "vitest": "^3.0.0"
+    "vite": "^6.0.0"
   },
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "packages/*"
   ]
 }
