--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,6 +7,12 @@
     "build": "vite build"
   },
   "nx": {
-    "implicitDependencies": ["block-parser-wasm"]
+    "implicitDependencies": [
+      "block-parser-wasm"
+    ]
+  },
+  "dependencies": {
+    "@wordpress/block-serialization-default-parser": "^5.24.0",
+    "fast-equals": "^5.2.2"
   }
 }
